# PyDIAMONDS

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  README.rst  setup.py
docs/: Classes.rst  Intro.rst  QuickExample.rst
examples/: exampleEggboxFunction.py
python_wrapper/: PyDiamonds.cpp
python_wrapper/include/: PyClusterer.h  PyMetric.h  PyModel.h  PyResults.h
